tenants/batch/redirect-https-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https-batch
  namespace: gateway-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
